k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "30"
spec:
  ingressClassName: nginx
  rules:
    - host: aminghuf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8000
  tls:
    - hosts:
        - aminghuf.dev
      secretName: tls-secret
